# swiftapply-frontend

./: .gitignore  .pylintrc  README.md  env.example  formhandler.txt  job_application_prompt  middleware.ts  next.config.js  package-lock.json  package.json  profile - database.txt  pyproject.toml  setup_backend.bat  start.bat  start_backend.ps1  tailwind.config.js  update_production_cors.sh
app/: globals.css  layout.tsx  page.tsx
app/applications/: page.tsx
app/dashboard/: page.tsx
app/jobSearch/: page.tsx
app/login/: page.tsx
app/notifications-demo/: page.tsx
app/profile/: page.tsx
app/register/: page.tsx
app/resumeGenerator/: page.tsx
app/settings/: page.tsx
app/step-by-step-resume/: page.tsx
src/api/: applicationApi.ts  applicationsApi.ts  autoApplyApi.ts  client.ts  dashboardApi.ts  enhancedAutoApplyApi.ts  jobApi.ts  resumeApi.ts  secureAuthApi.ts
src/components/: App.tsx
src/components/auth/: LoginForm.tsx  LoginVerificationForm.tsx  ProtectedRoute.tsx  (+2 more)
src/context/: AppContext.tsx  AuthContext.tsx
src/core/: componentRegistry.ts  serviceRegistry.ts
src/hooks/: useApplications.ts  useComprehensiveDashboard.ts  useDashboard.ts  useEnhancedAutoApply.ts  useJobs.ts  useNotification.ts  useResume.ts
src/services/: applicationService.ts  comprehensiveDashboardService.ts  dashboardService.ts  enhancedResumeService.ts  googleAuth.ts  jobService.ts  locationService.ts  profileService.ts  resumeService.ts
src/styles/: job-application.css  landing-animations.css
src/types/: index.ts
src/utils/: apiUtils.ts  fontUtils.ts  formatUtils.ts
(+45 files in other folders)
